--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 	
 	
-	
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" ></script>	
 <script>
 	function toggle(){
 		var header = document.querySelector("header");
