--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 					<!-- Main-Navbar -->
 					<div class="menu-bar">
 						<ul>
-							<li><a href="#" onclick="toggle()">Home</a></li>
-							<li><a href="#" onclick="toggle()">Portfolio</a></li>
-							<li><a href="#" onclick="toggle()">Bloge</a></li>
-							<li><a href="#" onclick="toggle()">About Us</a></li>
-							<li><a href="#" onclick="toggle()">Contact</a></li>
+							<li><a href="#header" onclick="toggle()">Home</a></li>
+							<li><a href="#portfolio" onclick="toggle()">Portfolio</a></li>
+							<li><a href="#features" onclick="toggle()">Features</a></li>
+							<li><a href="#aboutus" onclick="toggle()">About Us</a></li>
+							<li><a href="#contact" onclick="toggle()">Contact</a></li>
 						</ul>
 					</div>
 					<div class="toggle" onclick="toggle()"></div>
@@ -73,7 +73,7 @@
 	</header>
 	<main>
 		<!-- Personality Section -->
-		<section class="sec-frst">
+		<section class="sec-frst" id="features">
 			<div class="wrapper">
 				<div class="row">
 					<div class="top-title">
@@ -103,7 +103,7 @@
 			</div>
 		</section>
 		<!-- Our Work Demo -->
-		<section class="sec-second">
+		<section class="sec-second" id="portfolio">
 			<div class="wrapper">
 				<div class="row">
 					<div class="top-title">
@@ -148,7 +148,7 @@
 			</div>
 		</section>
 		<!-- Get In Touch -->
-		<section class="sec-third">
+		<section class="sec-third" id="contact">
 			<div class="wrapper">
 				<div class="row">
 					<div class="top-title">
